<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="number_of_cases">%1s cases</string>
    <string name="number_of_deaths">%1s deaths</string>
    <string name="number_of_recoveries">%1s recoveries</string>
    <string name="number_of_critical">%1s critical</string>
    <string name="number_of_countries">%1s countries</string>
    <string name="worldwide_total">Worldwide</string>
    <string name="sort_by_cases">Sort by cases</string>
    <string name="cases">cases</string>
    <string name="sort_by_recovered">Sort by recovered</string>
    <string name="recoveries">recoveries</string>
    <string name="sort_by_critical">Sort by critical</string>
    <string name="critical">critical</string>
    <string name="sort_by_deaths">Sort by deaths</string>
    <string name="deaths">deaths</string>
    <string name="sort_by_alphabets">Sort alphabetically</string>
    <string name="sorted_alphabetically">Sorted alphabetically</string>
    <string name="sorted_by">Sorted by %1s</string>
    <string name="search">Search</string>
    <string name="ordered_name">%1d. %1s</string>
    <string name="cap_countries">Countries</string>
    <string name="cap_cases">Cases</string>
    <string name="cap_recoveries">Recoveries</string>
    <string name="cap_critical">Critical</string>
    <string name="cap_deaths">Deaths</string>
    <string name="as_of">As of %1s</string>
    <string name="search_hint">Search by country name</string>
</resources>