<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardElevation="8dp"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:autoSizeTextType="uniform"
            android:padding="@dimen/item_country_padding"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
            android:textStyle="bold"
            android:textSize="@dimen/item_module_text_size"
            app:layout_constrainedWidth="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/last_updated"
            tools:layout_editor_absoluteX="4dp"
            tools:text="Country Name" />

        <TextView
            android:id="@+id/last_updated"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:padding="@dimen/item_country_padding"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textSize="@dimen/item_small_text_size"
            android:gravity="end"
            app:layout_constrainedWidth="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/title"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/as_of" />

        <TextView
            android:id="@+id/countries_text"
            style="@style/total_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constrainedWidth="true"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/countries"
            android:text="@string/cap_countries" />

        <TextView
            android:id="@+id/countries"
            style="@style/total_values"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/countries_text"
            app:layout_constraintTop_toBottomOf="@+id/title"
            tools:text="187" />

        <TextView
            android:id="@+id/cases_text"
            style="@style/total_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constrainedWidth="true"
            app:layout_constraintTop_toBottomOf="@+id/countries_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/cases"
            android:text="@string/cap_cases" />

        <TextView
            android:id="@+id/cases"
            style="@style/total_values"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cases_text"
            app:layout_constraintTop_toBottomOf="@+id/countries"
            tools:text="187" />

        <TextView
            android:id="@+id/recoveries_text"
            style="@style/total_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constrainedWidth="true"
            app:layout_constraintTop_toBottomOf="@+id/cases_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/recoveries"
            android:text="@string/cap_recoveries" />

        <TextView
            android:id="@+id/recoveries"
            style="@style/total_values"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/recoveries_text"
            app:layout_constraintTop_toBottomOf="@+id/cases"
            tools:text="187" />

        <TextView
            android:id="@+id/critical_text"
            style="@style/total_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constrainedWidth="true"
            app:layout_constraintTop_toBottomOf="@+id/recoveries_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/critical"
            android:text="@string/cap_critical" />

        <TextView
            android:id="@+id/critical"
            style="@style/total_values"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/critical_text"
            app:layout_constraintTop_toBottomOf="@+id/recoveries"
            tools:text="187" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/deaths_highlight"
            app:layout_constraintTop_toBottomOf="@+id/critical_text"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/deaths_text"
                style="@style/total_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constrainedWidth="true"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/deaths"
                android:text="@string/cap_deaths" />

            <TextView
                android:id="@+id/deaths"
                style="@style/total_values"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constrainedWidth="true"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/deaths_text"
                tools:text="187" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>